feat: 🚀 阵容模拟器左侧开发

--- a/src/views/battle-manage/style/chess.less
+++ b/src/views/battle-manage/style/chess.less
@@ -10,3 +10,16 @@
     padding: 0;
   }
 }
+
+.ellipsis {
+  display: -webkit-box !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
+.img-filter {
+  filter: drop-shadow(#FFf 20px 0);
+}
