--- a/src/views/battle-manage/editor/component/ChessBox/style.less
+++ b/src/views/battle-manage/editor/component/ChessBox/style.less
@@ -1,5 +1,5 @@
 .chess-box {
-  background: url("../../assets/images/slot-bg.png") no-repeat;
+  background: url("@/assets/images/slot-bg.png") no-repeat;
   background-size: 100%;
   width: 60px;
   height: 70px;
@@ -9,8 +9,8 @@
   .bg-img {
     display: block !important;
     margin: 0 auto !important;
-    -webkit-mask-image: url("../../assets/images/slot-bg.png") !important;
-    mask-image: url("../../assets/images/slot-bg.png") !important;
+    -webkit-mask-image: url("@/assets/images/slot-bg.png") !important;
+    mask-image: url("@/assets/images/slot-bg.png") !important;
     -webkit-mask-size: 100% !important;
     mask-size: 100% !important;
     background-repeat: no-repeat !important;
@@ -21,8 +21,7 @@
 
 .chess-box::after {
   content: "";
-  background: url(//game.gtimg.cn/images/lol/act/a20220802tftsimulator/slot-mask-border.png)
-    no-repeat center / 100%;
+  background: url("@/assets/images/icon-price-4.png") no-repeat center / 100%;
   width: 60px;
   height: 70px;
   position: absolute;
@@ -31,12 +30,10 @@
   margin-left: -50%;
 }
 
-
-
 .loopPriceBg(@count) when (@count>0) {
   .loopPriceBg((@count - 1));
   .price-@{count}::after {
-    background-image: url("../../assets/images/icon-price-@{count}.png");
+    background-image: url("@/assets/images/icon-price-@{count}.png");
   }
 }
 .loopPriceBg(5);
