--- a/src/views/battle-manage/style/chess.less
+++ b/src/views/battle-manage/style/chess.less
@@ -103,3 +103,36 @@
   };
 }
 .loopPrice(5);
+
+.fetter{
+  background-image: url('@/assets/images/sprite-img.png');
+  background-repeat: no-repeat;
+  background-size: 200px 176px;
+}
+
+.level-0{
+  background-position: -32px -115px;
+}
+
+.level-1{
+  background-position: -98px -115px;
+}
+
+.level-2{
+  background-position: -154px 1px;
+}
+
+.level-3{
+  background-position: -154px -36px;
+}
+
+.level-4{
+  background-position: -154px -73px;
+}
+
+.level-5{
+  background-position: -154px -110px;
+}
+// .level-2{
+//   background-position: -98px -115px;
+// }
