--- a/src/views/battle-manage/style/chess.less
+++ b/src/views/battle-manage/style/chess.less
@@ -194,3 +194,30 @@
 }
 
 .loopChessBd(5);
+
+.equip-group {
+  font-size: 16px;
+  position: relative;
+  display: flex;
+  align-items: center;
+
+  span {
+    flex-shrink: 0;
+    margin-right: 8px;
+  }
+}
+
+.equip-group::after {
+  content: '';
+  width: 100%;
+  height: 1px;
+  flex-grow: 1;
+  background-color: #23294a;
+}
+
+.right-box {
+  background-color: rgba(26, 31, 58, .5);
+  padding: 24px;
+  border-radius: 8px;
+  // p-24px b-rd-8px
+}
