--- a/src/index.css
+++ b/src/index.css
@@ -73,16 +73,20 @@ div{
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-track {
   background-color: rgb(0 0 0 / 5%);
+  border-radius: 6px;
+
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgb(144 147 153 / 30%);
   box-shadow: inset 0 0 6px rgb(0 0 0 / 20%);
+  border-radius: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
