wip: 🤣 海克斯开发

--- a/src/components/Modal/battle.less
+++ b/src/components/Modal/battle.less
@@ -8,11 +8,14 @@
             text-align: center;
             color: #f1f2f8;
             background-color: #1a1f3a !important;
+            font-weight: 700;
+            font-size: 20px;
         }
 
         .ant-modal-close {
             color: #585F88;
             top: 18px;
+
             .ant-modal-close-x {
                 font-size: 18px !important;
 
@@ -25,7 +28,7 @@
             border-bottom: 1px solid #23294a;
         }
 
-        .ant-modal-body{
+        .ant-modal-body {
             margin-top: 16px;
         }
 
