--- a/src/views/battle-manage/style/chess.less
+++ b/src/views/battle-manage/style/chess.less
@@ -219,5 +219,6 @@
   background-color: rgba(26, 31, 58, .5);
   padding: 24px;
   border-radius: 8px;
+  margin-bottom: 16px;
   // p-24px b-rd-8px
 }
